<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/volumeSliderFragment">

    <fragment
        android:id="@+id/about_libraries"
        android:name="com.klee.volumelockr.ui.AboutFragment"
        android:label="@string/about" />

    <fragment
        android:id="@+id/volumeSliderFragment"
        android:name="com.klee.volumelockr.ui.VolumeSliderFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_x_to_about_libs"
            app:destination="@id/about_libraries" />
        <action
          android:id="@+id/action_sliders_to_settings"
          app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
      android:id="@+id/settingsFragment"
      android:name="com.klee.volumelockr.ui.SettingsFragment"
      android:label="@string/options" />

</navigation>
